www/css/style-howmany-transit.css
/* Adapted from https://codepen.io/zipang/pen/pukyg */
.body-copy h2 {
    margin-top: 0;
}
section#legend {
	width: 150px;
	float: left;
    margin-right: 20px;
    margin-left: 2px;
}
#legend ol {
	position: relative;
	display: block;
	margin: 5% 0;
	padding-left: 4px;
	width: 0px;
	background: #555;
}
#legend li {
	position: relative;
	display: inline-block;
	top: -1em;
	left: 1em;
	height: 1em;
	width: 20em;
	font: bold 14px arial;
	color: #333;
}
#legend li span.missed {
    color: red;
}
#legend li span {
	display: none;
}
/* To accommodate the answers that are two lines */
#legend ol.done li.double {
    top: -.25em;
}
#legend ol.done li.double ~ li {
    top: -.25em;
}
.green li:before {
	background-color: #00933c;
}
.light-green li:before {
	background-color: #6cbe45;
}
.red li:before {
	background-color: #ee352e;
}
.purple li:before {
	background-color: #b933ad;
}
.blue li:before {
	background-color: #2850ad;
}
.orange li:before {
	background-color: #ff6319;
}
.yellow li:before {
	background-color: #fccc0a;
}
.brown li:before {
	background-color: #996633;
}
.dark-grey li:before {
	background-color: #808183;
}
.grey li:before {
	background-color: #a7a9ac;
}
#legend li:before {
    content: "";
    position: absolute;
    top: -0.2em;
    left: -2em;
    display: block;
    width: 16px;
    height: 16px;
    border: 4px solid #333;
    border-radius: 16px;
}
.show, #legend li span.show {
	display: block;
}
@media only screen and (min-width: 450px) {
    .body-copy #start-it {
        width: 400px;
    }
    .body-copy #end-it {
        width: 400px;
        border: 1px solid #ddd;
    }
}
#correct, #missed, h3, #share-it, .finished #result { clear: none; }
.finished p {
    max-width: 380px;
} 

